[package]
name = "dcc-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.8.0"
azure_messaging_servicebus = "0.8.0"
dotenv = "0.15.0"
tokio = { version = "1.21.2", features = ["full"] }
